--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
             "$PYBIN" -m pip install -U pip
             "$PYBIN" -m pip install --only-binary=:all: -r requirements.txt
             "$PYBIN" -m pip install --only-binary=:all: pyinstaller
-            echo "__version__ = \"${VERSION}\"" > _version.py
+            echo "__version__ = \"${{ env.VERSION }}\"" > _version.py
             "$PYBIN" -m PyInstaller --onefile --name vixl main.py
             tar -C dist -czf vixl-linux-x64.tar.gz vixl
 
