--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,9 @@ jobs:
             set -euo pipefail
             cd /work
             yum -y install curl zstd
-            PY_URL="https://github.com/indygreg/python-build-standalone/releases/download/20241202/cpython-3.11.9+20241202-x86_64-unknown-linux-gnu-pgo+lto-full.tar.zst"
-            curl -L "$PY_URL" -o /tmp/python.tar.zst
+            PY_URL="$(curl -fsSL https://api.github.com/repos/indygreg/python-build-standalone/releases/latest | /opt/python/cp311-cp311/bin/python -c 'import json,re,sys; data=json.load(sys.stdin); pats=[r"cpython-3\.11\.\d+\+\d{8}-x86_64-unknown-linux-gnu-pgo\+lto-full\.tar\.zst$", r"cpython-3\.11\.\d+\+\d{8}-x86_64-unknown-linux-gnu-.*\.tar\.zst$"]; u=next((a.get("browser_download_url", "") for a in data.get("assets", []) if any(re.search(p, a.get("browser_download_url", "")) for p in pats)), ""); print(u) if u else sys.exit("No matching python-build-standalone asset found for CPython 3.11 x86_64 linux-gnu")')"
+            echo "Using python-build-standalone: $PY_URL"
+            curl -fL "$PY_URL" -o /tmp/python.tar.zst
             mkdir -p /opt/py
             tar --use-compress-program=unzstd -xf /tmp/python.tar.zst -C /opt/py
             PYBIN="/opt/py/python/bin/python3"
